@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST libpgm-5.1.114~dfsg.tar.gz 1051807 RMD160 069c45445022dac83e7b0f3c6a02284c9ab9df3a SHA1 9e74c8808681d4b280bcaa000a14f37e3e1cb08e SHA256 11fa8590268b433cbc3fdab9536b8253ebc9b2e41823b9e3dc2cc21c279afb1d
+DIST libpgm-5.1.116~dfsg.tar.gz 1629377 RMD160 5963e7cb7d0fc7c19aafc4b8cada38394778fd16 SHA1 a1fa3a859cbd23664746755a53e69f15b45a6592 SHA256 40671e10e494af2e69806b21e7ec4e192c94e164c4082524931e470220383d2b
 EBUILD openpgm-5.1.114.ebuild 1054 RMD160 8999a7fa0e1d338a2793c8a563a077d0692afecf SHA1 14253fb486de119a6fb976d665aa7562613b59d4 SHA256 97f76ea62697788d7addcd1070ae9585c7d31e5d9c14e604fa33191e4962a239
-MISC ChangeLog 384 RMD160 2f3e775ec5a7664cfb42b979d5a8860af36e8358 SHA1 f735962e3619dd711f089c703ba2aa0604dd36f4 SHA256 49eaecbaea89e6b6ab2710be7deb0e3898e0e7c45fdda4acf4d3b53091d1de64
+EBUILD openpgm-5.1.116.ebuild 1035 RMD160 165bd3cfd574cec977fe7cd60f253a04e5fbcea9 SHA1 da2eaf16af76a68fbff530e8118de3fc1b238d9d SHA256 0bcadfae9bdf34984a3adfcb91285506a8d63e293ecb34de9f90fec0305761c8
+MISC ChangeLog 549 RMD160 4b5c5f7afea5afa901c52b96b1b7c35f80f703eb SHA1 1f41e127980957cbb4b580a551efb8404e576cf8 SHA256 777f82edbe5212f72db94b0a7c746390b59dc347b26654d92f1e6b9705895456
 MISC metadata.xml 355 RMD160 2854ab68f913e34e209cbff24ee8ebd2ac824054 SHA1 d4424f23cca91af00abe161b4ba7b147ae34f0d1 SHA256 243aeaece62e26ef27f5bcf003d565477803a4c4249a3274d465d0afaf4fa5c9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2wFkUACgkQxeMuLWsGW/uDRQCguZmga4zVtiDqrfmf6bOZkBng
+4GIAniuDL/TmZIosmi7dyJB8e2UYV+fu
+=gj8K
+-----END PGP SIGNATURE-----
