@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/openpgm
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/ChangeLog,v 1.1 2011/03/23 12:39:05 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/openpgm/ChangeLog,v 1.2 2011/04/21 11:34:19 djc Exp $
+
+*openpgm-5.1.116 (21 Apr 2011)
+
+  21 Apr 2011; Dirkjan Ochtman <djc@gentoo.org> +openpgm-5.1.116.ebuild:
+  Version bump openpgm for use with newer net-libs/zeromq.
 
 *openpgm-5.1.114 (23 Mar 2011)
 
